--- a/gmall-manage-web/src/main/resources/application.yml
+++ b/gmall-manage-web/src/main/resources/application.yml
@@ -16,3 +16,9 @@ spring:
     consumer:
       check: false
       timeout: ${DUBBO_TIMEOUT:10000}
+fileServer:
+  tracker:
+    server: ${TARCKER_SERVER:192.168.1.101:22122}
+  connect-timeout: 30000
+  network-timeout: 60000
+  url: ${FILESERVER_URL:http://192.168.1.101}
